refactor(nodes): 优化节点实现和异常处理
- 将 ForEachLoopNode 中的列表访问方法从 get(0) 和 get(size-1) 替换为 getFirst() 和 getLast()
- 在 ForEachLoopNode 的 coerceEnabled 方法中使用 switch 表达式替代传统 if-else 结构
- 从 GraphSerializer 中移除未使用的 Nullable 注解和 List 导入
- 在 ImGuiNodeIO 中将 IllegalArgumentException 替换为更具体的 NodeValidationException
- 为 NodeExecutor 的 newThread 方法参数添加 @NonNull 注解以增强类型安全
- 在 NodeRegistry 中引入 NodeValidationException 和 NodeExecutionException 进行更精确的异常处理
- 将 SubgraphNode 中的三元操作替换